styles/IgFeed.module.css
.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 1.5rem;
}

.igLinkContainer {
    display: flex;
    width: 100%;
    justify-content: space-between;
    background-color: var(--accent-grey-3);
    padding: 1rem;
    column-gap: 2.5%;
}

.igLink img {
    max-height: 10rem;
}

.igLink:focus {
    box-shadow: 0 0 10px 2px black;
}

.link {
    padding: 0.2rem;
}

.linkContainer {
    margin-bottom: 1rem;
}

.link:hover,
.link:focus,
.link:active {
    border-bottom: var(--link-bottom-border);
}

@media screen and (max-width: 899px) {
    .igLink:last-child {
        display: none;
    }
}

@media screen and (max-width: 619px) {
    .igLink:nth-last-child(2) {
        display: none;
    }
}

